Optimized Booking Service Enpoints